--- a/celtis.html
+++ b/celtis.html
@@ -1,4 +1,48 @@
 ---
 ---
 
-<p>celtis</p>
+<div class="container">
+    <h3 class="border"><strong>Boston Celtics</strong></h3>
+ <div>
+    <p>Los Boston Celtics son una de las franquicias más exitosas y con más historia de la National Basketball Association (NBA). Fundados en 1946 como miembros de la Basketball Association of America, los Celtics han ganado 17 campeonatos de la NBA, ocho de ellos consecutivos entre 1959 y 1966. El equipo ha contado con algunos de los mejores jugadores de la historia de la NBA, como Bill Russell, Bob Cousy, John Havlicek, Larry Bird, Kevin Garnett y Paul Pierce</p>
+ </div>
+ <div class="col-6"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8f/Boston_Celtics.svg/800px-Boston_Celtics.svg.png"
+    class="img-fluid" width="400" height="400">
+    </div>
+
+<div>
+        <p>Los primeros años de los Celtics estuvieron marcados por la lucha, ya que el equipo terminó con un récord perdedor en cada una de sus primeras siete temporadas. En 1950, el equipo contrató a Red Auerbach como entrenador jefe, y rápidamente convirtió a los Celtics en una potencia. Auerbach fichó a jugadores como Bill Russell y Bob Cousy, y el equipo llegó por primera vez a los playoffs en la temporada 1953-54.</p>
+    </div>
+<div>
+    <p>Los Celtics alcanzaron nuevas cotas a finales de la década de 1950 y principios de la de 1960, liderados por el juego dominante de Bill Russell. Russell, un altísimo pívot, era un feroz defensor y reboteador, y ayudó al equipo a ganar nueve campeonatos de la NBA en sus 13 temporadas en el equipo. La racha de ocho campeonatos consecutivos de los Celtics es uno de los mayores logros de la historia del deporte.</p>
+</div>
+<div>
+    <p>A finales de los sesenta y en los setenta, los Celtics siguieron cosechando éxitos, en parte gracias al juego de John Havlicek, conocido por sus tiros decisivos y su habilidad para todo. El equipo ganó otros dos campeonatos en este periodo, en 1968 y 1969.</p>
+</div>
+<div>
+    <p>La década de 1980 marcó una nueva era para los Celtics, ya que el equipo fichó a Larry Bird en 1979. Bird, un alero de Indiana State, se convirtió rápidamente en uno de los mejores jugadores de la historia de la NBA, llevando a los Celtics a ganar tres campeonatos en la década de 1980. Bird se unió a sus compañeros del futuro Salón de la Fama Kevin McHale y Robert Parish, y el trío formó una de las delanteras más dominantes de la historia de la NBA.</p>
+</div>
+<div> <p>A finales de los 90 y principios de los 2000, los Celtics lucharon por recuperar su antigua gloria. El equipo se perdió los playoffs en cada una de las temporadas 1996-97 y 1997-98, y no fue hasta la llegada de Paul Pierce, Antoine Walker y el entrenador Rick Pitino que el equipo empezó a dar la vuelta a la situación. En la temporada 2001-02, los Celtics volvieron a los playoffs por primera vez en seis años, y llegaron a las Finales de la Conferencia Este.</p>
+</div>
+<div>
+    <p>En la temporada 2007-08, los Celtics añadieron a Kevin Garnett y Ray Allen a su plantilla, formando un "Big Three" con Paul Pierce. El equipo tuvo una de las temporadas más exitosas en la historia de la franquicia, terminando con el mejor récord de la NBA y ganando el campeonato de la NBA. Los Celtics ganaron otro campeonato en 2010, y siguieron siendo uno de los mejores equipos de la Conferencia Este hasta el final de la década.
+  </p>
+</div>
+<div>
+    <p>Los Celtics han tenido una rivalidad histórica con los Lakers a lo largo de los años, ya que Los Ángeles es el segundo equipo con más títulos en la historia de la NBA (16). Ambos se han enfrentado en las Finales de la NBA un récord de 12 veces, de las cuales los Celtics han ganado nueve.</p>
+</div>
+<div>
+    <p>Caracterizados por sus colores verde y blanco, los Celtics han retirado un total de 22 números de camiseta, con jugadores como Larry Bird, Bill Russell, Kevin Garnett, Kevin McHale, Paul Pierce y muchos más.</p>
+</div>
+<div>
+<p>En la actualidad, los Celtics siguen siendo uno de los equipos más exitosos y populares de la NBA. El equipo juega en casa, en el TD Garden, y es conocido por su apasionada afición y su rica historia. Tanto dentro como fuera de la cancha, los Celtics siguen siendo una de las franquicias más emblemáticas y duraderas del deporte.</p>
+</div>
+<div>
+    <p>Campeonatos: 17 (1957, 1959, 1960, 1961, 1962, 1963, 1964, 1965, 1966, 1968, 1969, 1974, 1976, 1981, 1984, 1986, 2008)</p>
+</div>
+<div>
+    <p>Títulos de conferencia: 21 (1957, 1958, 1959, 1960, 1961, 1962, 1963, 1964, 1965, 1966,1968, 1969, 1974, 1976, 1981, 1984, 1985, 1986, 1987, 2008, 2010)</p>
+</div>
+<div>
+    <p>Títulos de división: 22 (1972, 1973, 1974, 1975, 1976, 1980, 1981, 1982, 1984, 1985,1986, 1987, 1988, 1991, 1992, 2005, 2008, 2009, 2010, 2011, 2012, 2017)</p>
+</div>
